--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,108 @@
-.container {
-  padding: 0 2rem;
+/* main {
+    max-width: 85%;
+    margin: auto;
+} */
+
+.service-section, .how-work-section--wrapper, .testomonial-wrapper, .hero-wrapper {
+  max-width: 85%;
+  margin: auto;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.hero-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
-.footer {
+.hero-text {
+  margin-bottom: 1.5em;
+}
+
+.hero-text h1, .hero-text h4 {
+  font-weight: 400;
+}
+
+.hero-text h1 {
+  font-size: 2.75rem;
+}
+
+.hero-text h4 {
+  width: 50%;
+}
+
+.hero-btn {
+  background-color: #663399;
+  border: none;
+  padding: .75em 2em;
+  color: #fff;
+  width: 55%;
+  border-radius: 20px 0 20px 0;
+}
+
+.hero-image--wrapper img{
+  max-width: 600px;
+}
+
+.service-section--wrapper {
+  background: url('/assets/img/service-blob.png') no-repeat;
+  background-size: auto;
+  background-position: center right;
+  padding: 4em 0;
+}
+
+.services-wrapper {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 800px;
+  padding-block: 3em;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.how-work--wrapper {
+  padding: 1em 0;
+  background: url('/assets/img/how-work--blob.png') no-repeat;
+  background-position: center left;
+  background-size: contain;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.how-work--section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.how-work--section p {
+  width: 60%;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.how-work--section img {
+  width: 400px;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.testomonial-wrapper {
+  padding-block: 3em;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.testomonals {
+  display: flex;
+  padding-block: 3em .5em;
+  overflow-x: hidden;
+  gap: 2em;
+}
+
+.testomonial-handler--wrapper {
+  padding-inline-start: 7em;
+}
+
+.testomonial-handlers {
+  display: inline-block;
+  background-color: #c4c4c4;
+  width: 60px;
+  height: 10px;
+  margin-right: .5em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.active-testomonial--handler {
+  background-color: #676767;
 }
