--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,19 +1,3 @@
-/* main {
-    max-width: 85%;
-    margin: auto;
-} */
-
-.service-section, .how-work-section--wrapper, .testomonial-wrapper, .hero-wrapper {
-  max-width: 85%;
-  margin: auto;
-}
-
-.hero-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .hero-text {
   margin-bottom: 1.5em;
 }
@@ -64,12 +48,6 @@
   background-size: contain;
 }
 
-.how-work--section {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .how-work--section p {
   width: 60%;
 }
@@ -105,4 +83,21 @@
 
 .active-testomonial--handler {
   background-color: #676767;
+}
+
+@media screen and (max-width: 768px) {
+  .services-wrapper, .hero-wrapper, .how-work--section {
+    flex-direction: column;
+  }
+  .hero-wrapper .hero-text--wrapper {
+    margin-bottom: 1em;
+    text-align: center;
+  }
+  .hero-text h4{
+    width: 100%;
+  }
+  .how-work--section p {
+    width: 100%;
+    margin-bottom: 2em;
+  }
 }
