--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -49,4 +50,11 @@ header>div {
   display: flex;
   justify-content: space-between;
   width: 50%;
+}
+
+
+@media screen and (max-width: 768px){
+ header {
+   border-bottom: 1px solid #f2f2f2;
+ }   
 }
