--- a/styles/home/ServiceSection.module.css
+++ b/styles/home/ServiceSection.module.css
@@ -12,3 +12,10 @@
 .service-top img {
     margin-right: 1em;
 }
+
+@media screen and (max-width: 768px) {
+    .service-section {
+        width: 100%;
+        padding-block: 1.5em;
+    }
+}
