--- a/styles/home/TestomonialSection.module.css
+++ b/styles/home/TestomonialSection.module.css
@@ -15,3 +15,9 @@
 .testomonial-card h4 {
     margin-bottom: .5em;
 }
+
+@media screen and (max-width: 768px){
+    .testomonial-card {
+        min-width: 100%;
+    }
+}
