--- a/styles/home/TestomonialSection.module.css
+++ b/styles/home/TestomonialSection.module.css
@@ -1,13 +1,16 @@
 .testomonial-card {
     padding: 1em .5em;
+    cursor: grab;
 }
-
+.testomonial-card:active {
+    cursor: grabbing;
+}
 .testomonial-card img {
     width: 80px;
     height: 80px;
     object-fit: cover;
     border-radius: 50%;
-    margin-right: 1em;
+    margin: 1em auto;
 }
 
 .testomonial-card h4 {
