--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,6 +138,28 @@
   background-color: #78E9F9;
   padding: 2em 4em;
 }
+.type-line {
+  position: relative;
+  width: 4.5em;
+  margin: 1em auto 0 auto;
+  border-right: 2px solid rgba(0, 0, 0, 0.75);
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);    
+}
+/* Animation */
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s infinite alternate,
+            blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  0%, 20% {width: 0;}
+  80%, 100% {width: 4.5em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(0, 0, 0, 0.75);}
+  to{border-right-color: transparent;}
+}
 .about-section--text {
   height: 70%;
   justify-content: space-evenly;
