--- a/styles/home/SideIndicator.module.css
+++ b/styles/home/SideIndicator.module.css
@@ -27,3 +27,8 @@
     background-color: #663399;
     transition: all 0.5s ease-in-out;
 }
+@media screen and (max-width: 768px) {
+    .side-indicator-holder {
+        display: none;
+    }    
+}
